--- a/b/bb/bbo/bbonline.com.html
+++ b/b/bb/bbo/bbonline.com.html
@@ -1,52 +1,53 @@
-<!--The following is the downloaded HTML source of the bbonline.com privacy policy that was archived on 2007-04-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070429175052id_/http%3A//www.bbonline.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bbonline.com privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230074700id_/http%3A//www.bbonline.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 
-<meta name="resource-type" value="document">
 <meta name="keywords" content="bed &amp; breakfast, bed and breakfast, bnb, b&amp;b, bed and breakfast directory, directory, bed &amp; breakfast directory, inn, Country Inns, travel, lodging, romance, jacuzzi, getaway, romantic, accommodations, mountains, recipes, contest, cookbooks, food, cooking, Tennessee, Kentucky, Arkansas, Missouri, Alabama, Nebraska, Oklahoma, Georgia, North Carolina, Florida, California, Michigan, Hawaii, Washington, Maine, Massachussetts, Colorado, New Mexico, Arizona, Alaska, Pennsylvania, Ohio, Indiana, Illinois, South Carolina, Virginia, Texas">
 <meta name="description" content="">
 <title>Bed &amp; Breakfast Inns ONLINE - Privacy Statement</title>
 <link rel="stylesheet" type="text/css" href="/css/bbonline.css">
 </head>
-<body bgcolor="#bcbc8f" topmargin="0" marginheight="0" marginwidth="0" leftmargin="0" rightmargin="0">
+<body bgcolor="#bcbc8f">
 <table width="1000" border="0" align="center" cellpadding="0" cellspacing="0" class="general_content_border">
   <tbody><tr>
     <td align="left" valign="top">
       <!-- BBO Header Include-->
-      <table border="0" align="center" cellpadding="0" cellspacing="0" width="100%">
+      <table border="0" align="center" cellpadding="0" cellspacing="0">
 	<tbody><tr>
 		<td bgcolor="#ffffff">
-			<a href="/"><img src="/images/bbo_logo.gif" border="0" width="642" height="73" hspace="0" vspace="0"></a><br>
-			<img src="/images/bbo_topnav_bg.gif" border="0" width="1000" height="18" hspace="0" vspace="0"></td>
-  		
+			<a href="/"><img src="/images/bbo_logo.gif" alt="bbonline.com" border="0" width="642" height="73" hspace="0" vspace="0"></a><br>
+			<img src="/images/bbo_topnav_bg.gif" alt="" width="1000" border="0" height="18" hspace="0" vspace="0">
+    </td>
 	</tr>
 </tbody></table>    </td>
   </tr>
   <tr>
     <td valign="top">
-    <!-- BBO Nav Crumbs Include-->
-  	<table width="100%" border="0" align="center" cellspacing="0" bgcolor="#ffffff">
-	  <tbody><tr>
-      <td bgcolor="#cbca9a" height="26">
-        <h1 class="nav_crumb_txt normal_txt">
-                    &nbsp;<a href="/" title="" class="lt_green_link px11 normal_txt">B&amp;B Online Home</a>
-          &nbsp;|&nbsp;
-                    <span class="lt_green_link px11 bold_txt">Privacy Statement</span>
-        </h1>
-      </td>
-    </tr>
-	  </tbody></table>
-	</td>
-  </tr>
-	  <tr>
-    <td valign="top">
+      <!-- BBO Nav Crumbs Include-->
       <table width="100%" border="0" align="center" cellspacing="0" bgcolor="#ffffff">
+      <tbody><tr>
+        <td bgcolor="#cbca9a" height="26">
+          <span class="nav_crumb_txt normal_txt">
+                        &nbsp;<a href="/" title="" class="lt_green_link px11 normal_txt">Bed and Breakfasts Home</a>
+            &nbsp;|&nbsp;
+                        <span class="lt_green_link px11 bold_txt">Privacy Statement</span>
+          </span>
+        </td>
+      </tr>
+      </tbody></table>
+	  </td>
+  </tr>
+      <tr>
+    <td valign="top">
+      <table width="1000" border="0" align="center" cellspacing="0" bgcolor="#ffffff">
       <tbody><tr>
       <td height="175" class="bbo_city_lt_blue_bg" align="center" valign="middle">
         <table width="100%" border="0" align="center" cellpadding="5" cellspacing="0">
           <tbody><tr>
-            <td colspan="2" align="center"><h2><span class="dark_green_txt px16 bold_txt">Privacy Statement</span></h2></td>
+            <td colspan="2" align="center">
+              <h1><span class="dark_green_txt px16 bold_txt">Privacy Statement</span></h1>
+                          </td>
           </tr>
         </tbody></table>
       </td>
@@ -54,15 +55,16 @@
       </tbody></table>
     </td>
   </tr>
-  <tr>
+    <tr>
     <td valign="top">
 		<!-- Body State -->
-		<table width="1000" border="0" cellpadding="2" cellspacing="0">
-		<tbody><tr align="center"><!-- Left Column -->
+		<table width="1000" border="0" cellpadding="2" bgcolor="#ffffff" cellspacing="0">
+		<tbody><tr align="center">
+      <!-- Left Column -->
       			<!-- End of left Column -->
 			<td valign="top" bgcolor="#ffffff">
 			<!-- Data table Start Here -->
-                	<div align="left" style="padding: 20px">
+        <div align="left" style="padding: 20px">
 <p>
 Bed &amp; Breakfasts Inns ONLINE ("BBonline"), an Internet Brands website, is committed to safeguarding your privacy online. This privacy policy applies to your information that we collect and receive; it does not apply to practices of businesses that we do not own or control or people we do not employ.  At no time will we sell your information or release your personally-identifiable data without your permission. You can visit www.BBonline.com ("Site") without revealing who you are or providing any personal information about yourself.  
 </p>
@@ -125,91 +127,94 @@ Effective 7/19/2006
   <tr>
   	<td valign="top">
 	<!-- BBO Footer Include -->
-	<table id="footerBlock" width="100%" bgcolor="#ffffff" cellpadding="6" cellspacing="0">
-	<tbody><tr>
-		<td height="63" class="bbo_footer_bg dark_green_txt px16 bold_txt" align="center" valign="top"><div style="padding-top:9px;">Other Areas of Bed &amp; Breakfast Inns ONLINE</div></td>
-	</tr>
-	<tr>
-		<td valign="top" align="center" height="300" class="dark_green_txt">
-				
-				<p><span class="dark_green_txt px12 bold_txt">Find a Bed &amp; Breakfast Inn in the United States:</span><br>
-<a href="/al/index.html" class="dark_green_link">Alabama Bed and Breakfast</a> |
-<a href="/ak/index.html" class="dark_green_link">Alaska Bed and Breakfast</a> |
-<a href="/az/index.html" class="dark_green_link">Arizona Bed and Breakfast</a> |
-<a href="/ar/index.html" class="dark_green_link">Arkansas Bed and Breakfast</a> |
-<a href="/ca/index.html" class="dark_green_link">California Bed and Breakfast</a> |
-<a href="/co/index.html" class="dark_green_link">Colorado Bed and Breakfast</a> |
-<a href="/ct/index.html" class="dark_green_link">Connecticut Bed and Breakfast</a> |
-<a href="/de/index.html" class="dark_green_link">Delaware Bed and Breakfast</a> |
-<a href="/dc/index.html" class="dark_green_link">District of Columbia Bed and Breakfast</a> |
-<a href="/fl/index.html" class="dark_green_link">Florida Bed and Breakfast</a> |
-<a href="/ga/index.html" class="dark_green_link">Georgia Bed and Breakfast</a> |
-<a href="/hi/index.html" class="dark_green_link">Hawaii Bed and Breakfast</a> |
-<a href="/id/index.html" class="dark_green_link">Idaho Bed and Breakfast</a> |
-<a href="/il/index.html" class="dark_green_link">Illinois Bed and Breakfast</a> |
-<a href="/in/index.html" class="dark_green_link">Indiana Bed and Breakfast</a> |
-<a href="/ia/index.html" class="dark_green_link">Iowa Bed and Breakfast</a> |
-<a href="/ks/index.html" class="dark_green_link">Kansas Bed and Breakfast</a> |
-<a href="/ky/index.html" class="dark_green_link">Kentucky Bed and Breakfast</a> |
-<a href="/la/index.html" class="dark_green_link">Louisiana Bed and Breakfast</a> |
-<a href="/me/index.html" class="dark_green_link">Maine Bed and Breakfast</a> |
-<a href="/md/index.html" class="dark_green_link">Maryland Bed and Breakfast</a> |
-<a href="/ma/index.html" class="dark_green_link">Massachusetts Bed and Breakfast</a> |
-<a href="/mi/index.html" class="dark_green_link">Michigan Bed and Breakfast</a> |
-<a href="/mn/index.html" class="dark_green_link">Minnesota Bed and Breakfast</a> |
-<a href="/ms/index.html" class="dark_green_link">Mississippi Bed and Breakfast</a> |
-<a href="/mo/index.html" class="dark_green_link">Missouri Bed and Breakfast</a> |
-<a href="/mt/index.html" class="dark_green_link">Montana Bed and Breakfast</a> |
-<a href="/ne/index.html" class="dark_green_link">Nebraska Bed and Breakfast</a> |
-<a href="/nv/index.html" class="dark_green_link">Nevada Bed and Breakfast</a> |
-<a href="/nh/index.html" class="dark_green_link">New Hampshire Bed and Breakfast</a> |
-<a href="/nj/index.html" class="dark_green_link">New Jersey Bed and Breakfast</a> |
-<a href="/nm/index.html" class="dark_green_link">New Mexico Bed and Breakfast</a> |
-<a href="/ny/index.html" class="dark_green_link">New York Bed and Breakfast</a> |
-<a href="/nc/index.html" class="dark_green_link">North Carolina Bed and Breakfast</a> |
-<a href="/nd/index.html" class="dark_green_link">North Dakota Bed and Breakfast</a> |
-<a href="/oh/index.html" class="dark_green_link">Ohio Bed and Breakfast</a> |
-<a href="/ok/index.html" class="dark_green_link">Oklahoma Bed and Breakfast</a> |
-<a href="/or/index.html" class="dark_green_link">Oregon Bed and Breakfast</a> |
-<a href="/pa/index.html" class="dark_green_link">Pennsylvania Bed and Breakfast</a> |
-<a href="/ri/index.html" class="dark_green_link">Rhode Island Bed and Breakfast</a> |
-<a href="/sc/index.html" class="dark_green_link">South Carolina Bed and Breakfast</a> |
-<a href="/sd/index.html" class="dark_green_link">South Dakota Bed and Breakfast</a> |
-<a href="/tn/index.html" class="dark_green_link">Tennessee Bed and Breakfast</a> |
-<a href="/tx/index.html" class="dark_green_link">Texas Bed and Breakfast</a> |
-<a href="/ut/index.html" class="dark_green_link">Utah Bed and Breakfast</a> |
-<a href="/vt/index.html" class="dark_green_link">Vermont Bed and Breakfast</a> |
-<a href="/va/index.html" class="dark_green_link">Virginia Bed and Breakfast</a> |
-<a href="/wa/index.html" class="dark_green_link">Washington Bed and Breakfast</a> |
-<a href="/wv/index.html" class="dark_green_link">West Virginia Bed and Breakfast</a> |
-<a href="/wi/index.html" class="dark_green_link">Wisconsin Bed and Breakfast</a> |
-<a href="/wy/index.html" class="dark_green_link">Wyoming Bed and Breakfast</a> |
-</p><br>
-<p>
-  <a href="/listing.html" class="maroon_txt px10">Locate A B&amp;B</a>&nbsp;•&nbsp;
-  <a href="/contest/index.html" class="maroon_txt px10">Win Two Free Nights</a>&nbsp;•&nbsp;
-  <a href="/recipe/index.html" class="maroon_txt px10">Recipes &amp; Cookbooks</a>&nbsp;•&nbsp;
-  <a href="/innkeeper/index.html" class="maroon_txt px10">INNKeeper INNformation</a>&nbsp;•&nbsp;
-
-  <a href="/usa.html" class="maroon_txt px10">Bed and Breakfast Associations</a>&nbsp;•&nbsp;
-  <a href="/contact.html" class="maroon_txt px10">Contact Us</a>
-</p>
-<br>				
-<p class="px9">
-Copyright © 1995-2007. Internet Brands, Inc.<br>
-Bed &amp; Breakfast Inns ONLINE and Circular www.bbonline.com logos are trademarks of Internet Brands, Inc. 
-All rights reserved.<br>
-Copying of any portion of this web site by written permission only.
-</p>
-<p class="px9">
-  By using the site, you signify your assent to the 
-  <a href="/privacy.html" class="dark_green_txt">privacy</a>, <a href="/readme.html" class="dark_green_txt">disclaimer</a>, and 
-  <a href="/copyright.html" class="dark_green_txt">copyright</a> policies of Internet Brands, Inc. 
-  If you do not agree to these policies, please do not use our sites. Your usage of the site further 
-  indicates your agreement to be subject to and bound by the jurisdiction and laws of the State of California.
-</p>		
-</td>
-</tr>
+    <table id="footerBlock" width="100%" bgcolor="#ffffff" cellpadding="6" cellspacing="0">
+  <tbody><tr>
+    <td height="63" class="bbo_footer_bg dark_green_txt px16 bold_txt" align="center" valign="top">
+      <div style="padding-top:9px;">Other Areas of Bed &amp; Breakfast Inns ONLINE</div>
+    </td>
+  </tr>
+  <tr>
+    <td valign="top" align="center" class="dark_green_txt">
+      <p>
+                <span class="dark_green_txt px12 bold_txt">Find a Bed &amp; Breakfast Inn in the United States:</span><br>
+        <a href="/al/index.html" class="dark_green_link">Alabama Bed and Breakfast</a> |
+        <a href="/ak/index.html" class="dark_green_link">Alaska Bed and Breakfast</a> |
+        <a href="/az/index.html" class="dark_green_link">Arizona Bed and Breakfast</a> |
+        <a href="/ar/index.html" class="dark_green_link">Arkansas Bed and Breakfast</a> |
+        <a href="/ca/index.html" class="dark_green_link">California Bed and Breakfast</a> |
+        <a href="/co/index.html" class="dark_green_link">Colorado Bed and Breakfast</a> |
+        <a href="/ct/index.html" class="dark_green_link">Connecticut Bed and Breakfast</a> |
+        <a href="/de/index.html" class="dark_green_link">Delaware Bed and Breakfast</a> |
+        <a href="/dc/index.html" class="dark_green_link">District of Columbia Bed and Breakfast</a> |
+        <a href="/fl/index.html" class="dark_green_link">Florida Bed and Breakfast</a> |
+        <a href="/ga/index.html" class="dark_green_link">Georgia Bed and Breakfast</a> |
+        <a href="/hi/index.html" class="dark_green_link">Hawaii Bed and Breakfast</a> |
+        <a href="/id/index.html" class="dark_green_link">Idaho Bed and Breakfast</a> |
+        <a href="/il/index.html" class="dark_green_link">Illinois Bed and Breakfast</a> |
+        <a href="/in/index.html" class="dark_green_link">Indiana Bed and Breakfast</a> |
+        <a href="/ia/index.html" class="dark_green_link">Iowa Bed and Breakfast</a> |
+        <a href="/ks/index.html" class="dark_green_link">Kansas Bed and Breakfast</a> |
+        <a href="/ky/index.html" class="dark_green_link">Kentucky Bed and Breakfast</a> |
+        <a href="/la/index.html" class="dark_green_link">Louisiana Bed and Breakfast</a> |
+        <a href="/me/index.html" class="dark_green_link">Maine Bed and Breakfast</a> |
+        <a href="/md/index.html" class="dark_green_link">Maryland Bed and Breakfast</a> |
+        <a href="/ma/index.html" class="dark_green_link">Massachusetts Bed and Breakfast</a> |
+        <a href="/mi/index.html" class="dark_green_link">Michigan Bed and Breakfast</a> |
+        <a href="/mn/index.html" class="dark_green_link">Minnesota Bed and Breakfast</a> |
+        <a href="/ms/index.html" class="dark_green_link">Mississippi Bed and Breakfast</a> |
+        <a href="/mo/index.html" class="dark_green_link">Missouri Bed and Breakfast</a> |
+        <a href="/mt/index.html" class="dark_green_link">Montana Bed and Breakfast</a> |
+        <a href="/ne/index.html" class="dark_green_link">Nebraska Bed and Breakfast</a> |
+        <a href="/nv/index.html" class="dark_green_link">Nevada Bed and Breakfast</a> |
+        <a href="/nh/index.html" class="dark_green_link">New Hampshire Bed and Breakfast</a> |
+        <a href="/nj/index.html" class="dark_green_link">New Jersey Bed and Breakfast</a> |
+        <a href="/nm/index.html" class="dark_green_link">New Mexico Bed and Breakfast</a> |
+        <a href="/ny/index.html" class="dark_green_link">New York Bed and Breakfast</a> |
+        <a href="/nc/index.html" class="dark_green_link">North Carolina Bed and Breakfast</a> |
+        <a href="/nd/index.html" class="dark_green_link">North Dakota Bed and Breakfast</a> |
+        <a href="/oh/index.html" class="dark_green_link">Ohio Bed and Breakfast</a> |
+        <a href="/ok/index.html" class="dark_green_link">Oklahoma Bed and Breakfast</a> |
+        <a href="/or/index.html" class="dark_green_link">Oregon Bed and Breakfast</a> |
+        <a href="/pa/index.html" class="dark_green_link">Pennsylvania Bed and Breakfast</a> |
+        <a href="/ri/index.html" class="dark_green_link">Rhode Island Bed and Breakfast</a> |
+        <a href="/sc/index.html" class="dark_green_link">South Carolina Bed and Breakfast</a> |
+        <a href="/sd/index.html" class="dark_green_link">South Dakota Bed and Breakfast</a> |
+        <a href="/tn/index.html" class="dark_green_link">Tennessee Bed and Breakfast</a> |
+        <a href="/tx/index.html" class="dark_green_link">Texas Bed and Breakfast</a> |
+        <a href="/ut/index.html" class="dark_green_link">Utah Bed and Breakfast</a> |
+        <a href="/vt/index.html" class="dark_green_link">Vermont Bed and Breakfast</a> |
+        <a href="/va/index.html" class="dark_green_link">Virginia Bed and Breakfast</a> |
+        <a href="/wa/index.html" class="dark_green_link">Washington Bed and Breakfast</a> |
+        <a href="/wv/index.html" class="dark_green_link">West Virginia Bed and Breakfast</a> |
+        <a href="/wi/index.html" class="dark_green_link">Wisconsin Bed and Breakfast</a> |
+        <a href="/wy/index.html" class="dark_green_link">Wyoming Bed and Breakfast</a> |
+              </p>
+      <br>
+      <p>
+        <a href="/listing.html" class="maroon_txt px10">Locate A B&amp;B</a>&nbsp;•&nbsp;
+        <a href="/contest/index.html" class="maroon_txt px10">Win Two Free Nights</a>&nbsp;•&nbsp;
+        <a href="/recipe/index.html" class="maroon_txt px10">Recipes &amp; Cookbooks</a>&nbsp;•&nbsp;
+        <a href="/innkeeper/index.html" class="maroon_txt px10">INNKeeper INNformation</a>&nbsp;•&nbsp;
+        <a href="/usa.html" class="maroon_txt px10">Bed and Breakfast Associations</a>&nbsp;•&nbsp;
+        <a href="/contact.html" class="maroon_txt px10">Contact Us</a>
+      </p>
+      <br>        
+      <p class="px9">
+      Copyright © 1995-2007. Internet Brands, Inc.<br>
+      Bed &amp; Breakfast Inns ONLINE and Circular www.bbonline.com logos are trademarks of Internet Brands, Inc. 
+      All rights reserved.<br>
+      Copying of any portion of this web site by written permission only.
+      </p>
+      <p class="px9">
+        By using the site, you signify your assent to the 
+        <a href="/privacy.html" class="dark_green_txt">privacy</a>,
+        <a href="/readme.html" class="dark_green_txt">disclaimer</a>, and 
+        <a href="/copyright.html" class="dark_green_txt">copyright</a> policies of Internet Brands, Inc. 
+        If you do not agree to these policies, please do not use our sites. Your usage of the site further 
+        indicates your agreement to be subject to and bound by the jurisdiction and laws of the State of California.
+      </p>    
+    </td>
+  </tr>
 </tbody></table>
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
 <script type="text/javascript">
