--- a/a/an/ant/antezeta.com.html
+++ b/a/an/ant/antezeta.com.html
@@ -1,12 +1,9 @@
-<!--The following is the downloaded HTML source of the antezeta.com privacy policy that was archived on 2007-04-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070406131947id_/http%3A//www.antezeta.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the antezeta.com privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230173006id_/http%3A//www.antezeta.com/privacy.html) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US"><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US"><head>
 <title>» Antezeta - Data Privacy Statement</title>
 <meta name="description" content="Antezeta - Data Privacy Statement">
-<meta http-equiv="Content-Language" content="en-us">
-<meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
-<meta http-equiv="Cache-Control" content="max-age=0,proxy-revalidate">
 <meta name="robots" content="noodp">
 <meta name="author" content="Sean Carlos">
 <meta name="copyright" content="Copyright (c) 2005-2007 by Sean Carlos. All rights reserved.">
@@ -19,19 +16,16 @@
 <!--[if gte IE 7]>
 <link href="/c/ie7.css" rel="stylesheet" media="all" type="text/css" title="Screen Stylesheet" />
 <![endif]-->
+<link href="/blog/feed/" rel="alternate" title="RSS feed for Antezeta Web Marketing Blog" type="application/rss+xml">
+<link href="/news.rss" rel="alternate" title="RSS feed for Antezeta News and Articles" type="application/rss+xml">
 <link href="/favicon.ico" rel="shortcut icon">
 <link href="/favicon.ico" rel="icon">
-<script type="text/javascript" src="/j/site.js">
-</script>
+<script src="/j/site.js" type="text/javascript"></script>
 <script src="/j/dhtmlwindow.js" type="text/javascript">
-//<![CDATA[
-/* DHTML Window Widget- © Dynamic Drive (www.dynamicdrive.com)
+/* DHTML Window Widget- (c) Dynamic Drive (www.dynamicdrive.com)
 * This notice must stay intact for legal use.
-* Visit http://www.dynamicdrive.com/ for full source code */
-//]]>
-</script>
-<script src="/j/form.js" type="text/javascript">
-</script>
+* Visit http://www.dynamicdrive.com/ for full source code */</script>
+<script src="/j/form.js" type="text/javascript"></script>
 </head>
 <body>
 <div id="header"><a href="/" id="azlogo" title="Home Page" name="azlogo"><img alt="Antezeta Logo" id="azlogoimg" src="/i/antezeta-en.png"></a> <span id="languageflags"><a href="http://www.antezeta.it/privacy.html" hreflang="it"><img class="flag" src="/i/it.png" alt="[Antezeta in Italiano]" title="Vai sul sito Antezeta in Italiano"></a> <a href="http://www.antezeta.de/" hreflang="de"><img class="flag" src="/i/de.png" alt="[Antezeta auf Deutsch]" title="Antezeta auf Deutsch"></a></span> <span id="aztoday"><script type="text/javascript">
@@ -44,7 +38,7 @@ document.write(sitedate);
 <li class="submenu"><a href="/focus-areas.html" title="Antezeta's areas of specialization" accesskey="s">Focus Areas</a>
 <ul>
 <li><a href="/search-engine-optimization.html" title="Search Engine Optimization" accesskey="o">Search Engine <em class="accessk">O</em>ptimization</a></li>
-<li><a href="/web-analytics.html" title="Website measures and metrics" accesskey="i">Web Analyt<em class="accessk">i</em>cs</a></li>
+<li><a href="/web-analytics/" title="Website measures and metrics" accesskey="i">Web Analyt<em class="accessk">i</em>cs</a></li>
 <li><a href="/usability.html" title="Website Usability &amp; accessibility - Responding well to a user's needs and expectations, regardless of the browser environment" accesskey="u"><em class="accessk">U</em>sability &amp; accessibility</a></li>
 </ul>
 </li>
@@ -67,7 +61,6 @@ document.write(sitedate);
 </ul>
 </li>
 <li><a href="/training/instructors.html">Instructors</a></li>
-<li><a href="/training/onsite-web-courses.html">Onsite Training</a></li>
 <li><a href="/training/course-terms.html">Terms &amp; Conditions</a></li>
 </ul>
 </li>
@@ -92,8 +85,8 @@ document.write(sitedate);
 <li><a href="/desktop-search.html" title="Desktop Search Tools: An overview of solutions available for Windows, Mac and Linux" accesskey="5">Desktop Search Tools <em class="accessk">‹5›</em></a></li>
 </ul>
 </li>
-<li><a href="/client/" rel="nofollow" title="Materials reserved for Antezeta clients" accesskey="l">C<em class="accessk">l</em>ient Area</a></li>
-<li class="submenu"><a id="current" href="/about.html" title="Information about this site" accesskey="a" name="current"><em class="accessk">A</em>bout</a>
+<li><a href="/blog/" title="Reflections on Search Engine Marketing and Web Analytics">Blog</a></li>
+<li class="submenu"><a id="current" href="/about.html" title="Information about this site" accesskey="a"><em class="accessk">A</em>bout</a>
 <ul>
 <li><a href="/cntct.html" title="Contact Antezeta" accesskey="c"><em class="accessk">C</em>ontact Us</a></li>
 <li><a href="/faq.html" title="Frequently asked questions about Antezeta's services" accesskey="f"><em class="accessk">F</em>AQ</a></li>
@@ -108,6 +101,7 @@ document.write(sitedate);
 </ul>
 </div>
 <div id="breadcrumbs"><a href="/" title="Site start page" accesskey="h"><em class="accessk">H</em>ome</a> → <a href="/about.html" title="Information about this site" accesskey="a"><em class="accessk">A</em>bout</a> → Data Privacy Statement</div>
+
 <h1>Data Privacy Statement</h1>
 <div class="SideColL">
 <div class="SideSub"><script type="text/javascript" src="/j/newslink.js">
@@ -159,20 +153,33 @@ document.write(sitedate);
 <h2 id="p6">Changes to this Privacy Statement</h2>
 <p>This policy may change from time to time. If it changes in any way, we will place the updated version here. Regularly reviewing this page when you visit our site ensures you are always aware of what information we collect, how we use it and under what circumstances, if any, we will share it with other parties.</p>
 <p>Last updated: 2005-06-25.</p>
-<div id="newspu"><script type="text/javascript" src="/j/news-signup.js">
-</script></div>
+<div id="newspu"><script type="text/javascript" src="/j/news-signup.js"></script></div>
 <div id="footernav"><a href="/" title="Site start page" accesskey="h"><em class="accessk">H</em>ome</a> · <a href="/cntct.html" title="Contact Antezeta" accesskey="c"><em class="accessk">C</em>ontact Us</a> · <a href="/sitemap.html" title="Site Map - the site navigation tree" accesskey="m">Site <em class="accessk">M</em>ap &amp; Search</a> · <a href="/access.html" title="Keyboard Shortcut Access Keys" accesskey="k"><em class="accessk">K</em>eyboard shortcuts</a> · <a href="#azlogo" title="Jump to the top of the page" accesskey="j">Top ↑</a></div>
 <div id="footer">Copyright © 2005-2007 Sean Carlos. All rights reserved.</div>
 <hr class="HRsdnubl">
 <hr class="HRsdnubr">
 <hr class="HRbtmrule">
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script><script type="text/javascript">
+<script type="text/javascript">
 //<![CDATA[
-_uacct = "UA-88671-1";
-urchinTracker();
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+//]]>
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+//<![CDATA[
+var pageTracker = _gat._getTracker("UA-88671-1");
+pageTracker._initData();
+pageTracker._trackPageview();
 //]]>
 </script>
+<script src="/j/links.js" type="text/javascript"></script>
+<script src="http://edge.quantserve.com/quant.js" type="text/javascript"></script>
+<script type="text/javascript">
+//<![CDATA[
+_qacct="p-b8nRsrwsOp-2-";quantserve();
+//]]>
+</script>
+<noscript><p><img src="http://pixel.quantserve.com/pixel/p-b8nRsrwsOp-2-.gif" style="display: none" height="1" width="1" alt="Quantcast" /></p></noscript>
 
 
 </body></html>
