--- a/b/bi/big/biggerpockets.com.html
+++ b/b/bi/big/biggerpockets.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the biggerpockets.com privacy policy that was archived on 2007-04-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070409235331id_/http%3A//biggerpockets.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the biggerpockets.com privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230185922id_/http%3A//www.biggerpockets.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>BiggerPockets.com Real Estate Investment Community Privacy Policy</title>
@@ -39,9 +39,9 @@ h2 { margin-bottom:0.25em; }
 					</td>
 					<td align="right">
 <!-- start ad -->
-					<script type="text/javascript"><!--
-  amazon_ad_tag = "biggerpockets-20";  amazon_ad_width = "468";  amazon_ad_height = "60";  amazon_ad_link_target = "new";  amazon_color_link = "1E5FA1";  amazon_ad_categories = "ahefm";//--></script>
-<script type="text/javascript" src="http://www.assoc-amazon.com/s/ads.js"></script><div id="beacon_31" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://biggerpockets.com/adserver/adlog.php?bannerid=31&amp;clientid=2&amp;zoneid=1&amp;source=&amp;block=0&amp;capping=0&amp;cb=b99ac5e048a917d436b4f16668138bd8" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div><!-- end ad -->
+<!--/* Openads Local Mode Tag v2.4.0 */-->
+
+<a href="http://www.biggerpockets.com/adsnew/www/delivery/ck.php?oaparams=2__bannerid=66__zoneid=1__cb=4fa49b39fc__maxdest=http://www.realtybargains.com/Affiliate.rb?affacc=CD3745&amp;bid=35&amp;aid=CD3745&amp;opt=" target="_blank"><img src="http://realtybargains.directtrack.com/42/3745/35" alt="Free Foreclosure Search" border="0"></a><div id="beacon_66" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://www.biggerpockets.com/adsnew/www/delivery/lg.php?bannerid=66&amp;campaignid=1&amp;zoneid=1&amp;channel_ids=,&amp;loc=http%3A%2F%2Fwww.biggerpockets.com%2Fprivacy.html&amp;cb=4fa49b39fc" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div><!-- end ad -->
 	
 </td></tr>
 </tbody></table>
@@ -202,12 +202,13 @@ google_color_text = "000000";
 
 • <a href="http://www.biggerpockets.com/">BiggerPockets Home</a><br>	
 • <a href="http://forums.biggerpockets.com/">Real Estate Forums</a><br>
-		• <a href="http://www.biggerpockets.com/chat/" target="_blank">Real Estate Chatroom</a><br>
+• <a href="http://store.biggerpockets.com/">Real Estate Store</a><br>
+		• <a href="http://www.biggerpockets.com/chat/">Real Estate Chatroom</a><br>
         • <a href="http://www.biggerpockets.com/properties/">Property Listings</a><br>
 		  • <a href="http://www.biggerpockets.com/recritic.html">Property Analysis Tool</a><br>
- • <a href="http://www.biggerpockets.com/renewsblog/">Real Estate News Blog</a><br>
+• <a href="http://www.biggerpockets.com/renewsblog/">Real Estate News Blog</a><br>
 • <a href="http://www.biggerpockets.com/real-estate-podcasts/">Real Estate Podcasts</a><br>
-		• <a href="http://wiki.biggerpockets.com/">Real Estate Wiki</a>
+		
 		<p>
 		</p></font></td></tr><tr>
    		<td height="10" width="176" bgcolor="#e2e5d0">
@@ -218,23 +219,25 @@ google_color_text = "000000";
    		<td>
 
    		<font face="verdana" size="-2">
-		• <a href="http://www.biggerpockets.com/credit-report.html">Credit Reports &amp; FICO</a><br>
-		• <a href="http://www.biggerpockets.com/house-value-comps.html">Find House Values &amp; Comps</a><br>
-		• <a href="http://www.biggerpockets.com/legal-services.html">Legal Services</a><br>
+• <a href="http://www.biggerpockets.com/credit-report.html">Credit Reports &amp; FICO</a><br>
+• <a href="http://www.biggerpockets.com/house-value-comps.html">Find House Values &amp; Comps</a><br>
+• <a href="http://www.biggerpockets.com/investors-network/">Investors Network</a><br>
+• <a href="http://www.biggerpockets.com/legal-services.html">Legal Services</a><br>
 
-		• <a href="http://www.biggerpockets.com/maps.html">Maps &amp; Mapping Services</a><br>
-		• <a href="http://www.biggerpockets.com/loan-mortgage.html">Mortgage &amp; Loan Search</a><br>
+• <a href="http://www.biggerpockets.com/maps.html">Maps &amp; Mapping Services</a><br>
+• <a href="http://www.biggerpockets.com/meet-the-investor.html">Meet the Investor</a><br>
+• <a href="http://www.biggerpockets.com/loan-mortgage.html">Mortgage &amp; Loan Search</a><br>
 
-     	• <a href="http://www.biggerpockets.com/articles/">Real Estate Articles</a><br>
-		• <a href="http://www.biggerpockets.com/abbrev.html">Real Estate Abbreviations</a><br>
+• <a href="http://www.biggerpockets.com/articles/">Real Estate Articles</a><br>
+• <a href="http://www.biggerpockets.com/abbrev.html">Real Estate Abbreviations</a><br>
 
-		• <a href="http://www.biggerpockets.com/glossary.html">Real Estate Glossary</a><br>
-		• <a href="http://www.biggerpockets.com/directory/">Real Estate Services</a><br>
-		• <a href="http://www.biggerpockets.com/legalgovrecords.html">Record Searches &amp; RE Law</a><br>
-		• <a href="http://www.biggerpockets.com/success-stories.html">Success Stories</a><br>
+• <a href="http://www.biggerpockets.com/glossary.html">Real Estate Glossary</a><br>
+• <a href="http://www.biggerpockets.com/directory/">Real Estate Services</a><br>
+• <a href="http://www.biggerpockets.com/legalgovrecords.html">Record Searches &amp; RE Law</a><br>
+• <a href="http://www.biggerpockets.com/success-stories.html">Success Stories</a><br>
 
-		• <a href="http://www.biggerpockets.com/real-estate-forms.html">Forms &amp; Contracts</a><br>
-		• <a href="http://www.biggerpockets.com/mortgage.html">Mortgage Calculator</a><p>		
+• <a href="http://www.biggerpockets.com/real-estate-forms.html">Forms &amp; Contracts</a><br>
+• <a href="http://www.biggerpockets.com/mortgage.html">Mortgage Calculator</a><p>		
    		</p></font></td></tr><tr>
 
    		<td height="10" width="176" bgcolor="#e2e5d0">
@@ -245,12 +248,13 @@ google_color_text = "000000";
    		<td>
 
    		<font face="verdana" size="-2">
-        • <a href="http://www.biggerpockets.com/foreclosure-process.html">The Foreclosure Process</a><br>
-        • <a href="http://www.biggerpockets.com/find-foreclosure-homes.html">Where to Find Foreclosures</a><br>
-   		• <a href="http://www.biggerpockets.com/bank-reo.html">Bank REO Listings</a><br>
-		• <a href="http://www.biggerpockets.com/pre-foreclosures.html">Pre-Foreclosures</a><br>
-		• <a href="http://www.biggerpockets.com/government-owned-property.html">Government Foreclosures</a><br>
-		• <a href="http://www.biggerpockets.com/foreclosed_property_management.html">Asset Management REO</a><p><br>
+• <a href="http://www.biggerpockets.com/foreclosure-process.html">The Foreclosure Process</a><br>
+• <a href="http://www.biggerpockets.com/find-foreclosure-homes.html">Where to Find Foreclosures</a><br>
+• <a href="http://www.biggerpockets.com/foreclosurelaw/">State Foreclosure Laws</a><br>
+• <a href="http://www.biggerpockets.com/bank-reo.html">Bank REO Listings</a><br>
+• <a href="http://www.biggerpockets.com/pre-foreclosures.html">Pre-Foreclosures</a><br>
+• <a href="http://www.biggerpockets.com/government-owned-property.html">Government Foreclosures</a><br>
+• <a href="http://www.biggerpockets.com/foreclosed_property_management.html">Asset Management REO</a><p><br>
 
 
 </p></font></td></tr><tr>
@@ -262,12 +266,13 @@ google_color_text = "000000";
    		</p></td></tr><tr>
    		<td>
    		<font face="verdana" size="-2">
-		• <a href="http://www.biggerpockets.com/landlording.html">Landlording Resources</a><br>
-		• <a href="http://www.biggerpockets.com/property-managers.html">Management Companies</a><br>
-                •  <a href="online-property-management-software.html">Online Property Management</a><br>
-		• <a href="http://www.biggerpockets.com/rent-recovery.html">Rent Recovery Service</a><br>
-		• <a href="http://www.biggerpockets.com/section-8-hud.html">Section 8 Resources</a><br>
-		• <a href="http://www.biggerpockets.com/rehabbing.html">Rehabbing Resources</a><br>
+• <a href="http://www.biggerpockets.com/landlording.html">Landlording Resources</a><br>
+• <a href="http://www.biggerpockets.com/property-managers.html">Management Companies</a><br>
+•  <a href="http://www.biggerpockets.com/online-property-management-software.html">Online Property Management</a><br>
+• <a href="http://www.biggerpockets.com/rent-recovery.html">Rent Recovery Service</a><br>
+• <a href="http://www.biggerpockets.com/section-8-hud.html">Section 8 Resources</a><br>
+• <a href="http://www.biggerpockets.com/tenant-screening.html">Tenant Screening</a><br>
+• <a href="http://www.biggerpockets.com/rehabbing.html">Rehabbing Resources</a><br>
 		</font><p><font face="verdana" size="-2">
 
 		</font>		
@@ -282,9 +287,9 @@ google_color_text = "000000";
    		</p></td></tr><tr>
    		<td>
    		<font face="verdana" size="-2">			
-		• <a href="http://www.biggerpockets.com/commercial-real-estate.html">Commercial Real Estate</a><br>
-		• <a href="http://www.biggerpockets.com/farm-rural-land.html">Farm &amp; Rural Land Sites</a><br>
-		• <a href="http://www.biggerpockets.com/foreclosure-sales/land-property-auctions.html">Land &amp; Property Auctions</a><p>
+• <a href="http://www.biggerpockets.com/commercial-real-estate.html">Commercial Real Estate</a><br>
+• <a href="http://www.biggerpockets.com/farm-rural-land.html">Farm &amp; Rural Land Sites</a><br>
+• <a href="http://www.biggerpockets.com/foreclosure-sales/land-property-auctions.html">Land &amp; Property Auctions</a><p>
 		
 </p></font></td></tr><tr>
    		<td width="176" bgcolor="#e2e5d0">
@@ -296,7 +301,7 @@ google_color_text = "000000";
    		<td>
    		<font face="verdana" size="-2">
 		<a href="http://www.biggerpockets.com/1031-exchange.html">1031 Exchanges</a><br>
-		<a href="http://www.biggerpockets.com/county-assessor.html">County Assessor's Offices</a><br>
+		<a href="http://www.biggerpockets.com/county-assessor.html">County Records Offices</a><br>
 		<a href="http://www.biggerpockets.com/real-estate-investment-clubs.html">Real Estate Investment Clubs</a><br>
 		<a href="http://www.biggerpockets.com/cash-flow-101-clubs-kiyosaki.html">CashFlow 101/202 Clubs</a><br>
 		</font><p><font face="verdana" size="-2">
@@ -316,7 +321,7 @@ google_color_text = "000000";
 		<a href="http://www.biggerpockets.com/about.html">About Us</a><br>
 		<a href="http://www.biggerpockets.com/advertise.html">Advertise with Us</a><br>
 
-		<a href="javascript:addbookmark()">Bookmark Us</a><br> 
+		<a href="donate.html">Donate</a><br> 
         <a href="http://www.biggerpockets.com/employment.html">Employment</a><br> 
 		<a href="mailto:webmaster@biggerpockets.com">Contact Us</a><br>  
 		<a href="http://www.biggerpockets.com/link-to-us.html">Link to Us</a><br>
@@ -440,7 +445,7 @@ google_color_text = "000000";
 <b>Note:</b> All information on this site is subject to change.  Please read our <b><a href="privacy.html">Privacy Policy</a></b>.<br>
 Use of this site constitutes acceptance of our <b>User Agreement</b>.
 </p><p><b>
-Copyright © 2004-2007 BiggerPockets, Inc.  All Rights Reserved.</b>
+Copyright © 2004-2008 BiggerPockets, Inc.  All Rights Reserved.</b>
 </p></center>
 </font></td>
 </tr>
